<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RCI</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_scan">Scan</string>
    <string name="activity_messages">Messages</string>
    <string name="title_log_in">Log In</string>
    <string name="title_scan_results">Scan Results</string>
    <string name="title_how_to">How To</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="button_log_in">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_button">Scan Now</string>
    <string name="options_button_adv">Advance</string>
    <string name="options_button_basic">Basic</string>
    <string name="current_channel_text">Current Channel:</string>
    <string name="optimal_channel_text">Optimal Channel:</string>
    <string name="action_logout">Log out</string>
    <string name="messages_send_text">Send</string>
    <string-array name="friends">
        <item>Chase</item>
        <item>Dawson</item>
        <item>Richard</item>
    </string-array>
    <string-array name="help_options">
        <item>Scan</item>
        <item>Understand Channels</item>
        <item>Change Router Channel</item>
    </string-array>
    <string-array name="router_hardware">
        <item>3Com</item>
        <item>Apple</item>
        <item>Asus</item>
        <item>Belkin</item>
        <item>Buffalo</item>
        <item>Dell</item>
        <item>D-Link</item>
        <item>Linksys</item>
        <item>Microsoft</item>
        <item>Motorola</item>
        <item>MSI</item>
        <item>Netgear</item>
        <item>Senao</item>
        <item>SpeedTouch</item>
        <item>Trendnet</item>
        <item>U.S. Robotics</item>
        <item>Zyxel</item>
    </string-array>
    <string name="app_id">300021416832795</string>
    <string name="title_facebook_login">Facebook</string>
    <string name="activity_help">Help</string>
    <string name="login_register_text">Register</string>

</resources>
