<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_gradient"
    tools:context="com.example.rci.rci.LogInActivity">

    //Log In Text
    <TextView
        android:text="@string/title_log_in"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:id="@+id/titleLogIn"
        android:textSize="75sp"
        android:gravity="center" />


    //Email input text

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailInputText"
        android:layout_alignBottom="@+id/emailText"
        android:layout_alignParentRight="true" />

    //Text that says email
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email"
        android:id="@+id/emailText"
        android:layout_below="@+id/titleLogIn"
        android:layout_marginTop="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    // Password input text
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInputText"
        android:layout_below="@+id/emailInputText"
        android:layout_alignRight="@+id/emailInputText"
        android:layout_alignEnd="@+id/emailInputText"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/emailInputText"
        android:layout_alignStart="@+id/emailInputText" />

    // Text that says password
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password"
        android:id="@+id/passwordText"
        android:layout_alignBottom="@+id/passwordInputText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    // Log in button
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_log_in"
        android:id="@+id/button1"
        android:onClick="login"
        android:layout_below="@+id/passwordInputText"
        android:layout_toRightOf="@+id/authButton"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="58dp" />

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="435dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register_text"
        android:id="@+id/button"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/emailText"
        android:onClick="register" />

</RelativeLayout>
