<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.example.rci.rci.ScanFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/scan_button"
        android:id="@+id/scan_scannow"
        android:layout_marginBottom="31dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/title_scan_results"
        android:layout_alignStart="@+id/title_scan_results" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current_channel_text"
        android:id="@+id/messageText"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="102dp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/optimal_channel_text"
        android:id="@+id/textView2"
        android:layout_marginBottom="60dp"
        android:layout_above="@+id/scan_scannow"
        android:layout_alignLeft="@+id/messageText"
        android:layout_alignStart="@+id/messageText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="ch?"
        android:id="@+id/current_channel"
        android:layout_alignBaseline="@+id/messageText"
        android:layout_alignBottom="@+id/messageText"
        android:layout_alignStart="@id/optimal_channel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="11"
        android:id="@+id/optimal_channel"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignRight="@+id/title_scan_results"
        android:layout_alignEnd="@+id/title_scan_results"
        android:layout_marginRight="32dp" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:textSize="55sp"
        android:text="Scan Results"
        android:id="@+id/title_scan_results"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Advance"
        android:id="@+id/options_button_adv"
        android:layout_alignBottom="@+id/scan_scannow"
        android:layout_alignRight="@+id/title_scan_results"
        android:layout_alignEnd="@+id/title_scan_results" />
</RelativeLayout>
